# Orichalcum

./: CHANGELOG.md  Cargo.nix  Cargo.toml  README.md  flake.nix
examples/: basic_flow.rs
src/: lib.rs
src/core/: mod.rs  sealed.rs  semantic.rs  telemetry.rs  validation.rs
src/core/async_impl/: async_batch_node.rs  async_flow.rs  async_node.rs  async_parallel_batch_node.rs  mod.rs
src/core/semantic/: mod.rs  node.rs  registry.rs  signature.rs
src/core/sync_impl/: batch_flow.rs  batch_node.rs  flow.rs  mod.rs  node.rs
src/llm/: deepseek.rs  error.rs  gemini.rs  mod.rs  ollama.rs
src/llm/semantic/: mod.rs  node.rs  signature.rs
tests/: basic_flow_integration.rs  semantic_validation.rs
