[package]
name = "orichalcum"
version = "0.3.0"
edition = "2024"
description = "My agent orchestration framework"
license = "MIT"

[features]
default = []
llm = ["dep:reqwest", "dep:serde", "dep:chrono"]

[dependencies]
json = "0.12.4"
log = "0.4.28"
serde_json = "1.0.145"
thiserror = "2.0.17"

# Optional Dependencies
chrono = { version = "0.4.42", features = ["serde"], optional=true }
reqwest = { version = "0.12.23", features = ["json"], optional=true }
serde = { version = "1.0.228", features = ["derive"], optional=true}
async-trait = "0.1.89"
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["rt", "macros", "time"] }
